...
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.43"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            app:layout_constraintTop_toBottomOf="@id/afterArrowSpace"
            app:srcCompat="@drawable/audio_player_placeholder" />
        <TextView
            android:id="@+id/musicTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/playerPicture"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            android:text="Yesterday (Remastered 2009)"
            android:layout_marginTop="@dimen/max_margin"
...
            android:textColor="@color/yp_color_text"
            app:layout_constraintTop_toBottomOf="@id/musicTitle"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
            android:layout_marginTop="@dimen/margin_12"/>

        <ImageButton
            android:id="@+id/playlistButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/playlist_button"
            android:background="@drawable/playlist_button"
            android:contentDescription="@string/add_to_playlist"
            app:layout_constraintStart_toStartOf="@id/leftBorder"
...
        android:clickable="true"
        android:focusable="true"
        android:importantForAccessibility="no"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/playlistsBottomSheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/player_bottom_sheet_background"
        android:clickable="true"
        android:orientation="vertical"
        android:paddingBottom="16dp"
...
            android:gravity="center"
            android:text="@string/add_to_playlist"
            android:textColor="@color/yp_color_text"
            android:textSize="19sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/newPlaylistButton"
            style="@style/MediaActionButton"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="24dp"
            android:letterSpacing="0"
            android:text="@string/new_playlist" />

...
