...
    <string name="albome">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="back">Назад</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="media_library_empty">Ваша медиатека пуста</string>
    <string name="no_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="no_track_data">Нет данных о треке</string>
    <string name="audio_unavailable">Аудио недоступно</string>
    <string name="add_to_favorites">Добавить в избранное</string>
...
    <string name="favorites_error">Не удалось обновить избранное. Попробуйте ещё раз.</string>
    <string name="favorites_load_error">Не удалось загрузить избранные треки</string>
    <string name="playlist_name_hint">Название*</string>
    <string name="playlist_description_hint">Описание</string>
    <string name="choose_playlist_cover">Выбрать обложку плейлиста</string>
    <string name="create_playlist">Создать</string>
    <string name="discard_playlist_title">Завершить создание плейлиста?</string>
    <string name="discard_playlist_message">Все несохраненные данные будут потеряны</string>
    <string name="cancel">Отмена</string>
    <string name="finish">Завершить</string>
    <string name="playlist_created">Плейлист %1$s создан</string>
    <string name="playlist_save_error">Не удалось создать плейлист. Попробуйте ещё раз.</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="added_to_playlist">Добавлено в плейлист %1$s</string>
...
